--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,9 @@
 body {background-color: pink;}
-
-.letraazul{color: blue; font-size: 40px; text-align: center;}
+.letraazul{color: red; font-size: 40px; text-align: center;}
 .linea {text-decoration: underline;}
 .imagen {height: 400px; width: 600px; ;}
 .centro {text-align: center; font-size: 30px}
 .texto {text-align: center;}
+.negrita {font-weight: bold;}
+.icono {width: 40px; position: fixed; bottom: 10px; right: 15px}
+.face {width: 60px;bottom: 10px; left: 15px}
